--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -77,6 +77,11 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='lib/dataTables.bootstrap.1.10.7.css') }}">
   <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='lib/dataTables.bootstrap.1.10.7.js') }}"></script>
 
+  <!-- dataTables buttons: -->
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='lib/buttons.dataTables.min.css') }}">
+  <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='lib/dataTables.buttons.min.js') }}"></script>
+  <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='lib/buttons.html5.min.js') }}"></script>
+
   <title>{{ title }}</title>
 </head>
 
