--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -81,6 +81,7 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='lib/buttons.dataTables.min.css') }}">
   <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='lib/dataTables.buttons.min.js') }}"></script>
   <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='lib/buttons.html5.min.js') }}"></script>
+  <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='lib/buttons.colVis.min.js') }}"></script>
 
   <title>{{ title }}</title>
 </head>
