--- a/fpa/fp_web_admin/templates/newTrait.html
+++ b/fpa/fp_web_admin/templates/newTrait.html
@@ -4,7 +4,7 @@
 <script src="{{ url_for('static', filename='newTrait.js') }}"></script>
 <div id="attributeData" data-attributes="{{attributesList}}">
   <form enctype="multipart/form-data"
-        onsubmit="return ValidateTraitForm()"
+        onsubmit="return fpTrait.validateTraitForm()"
         method="post">
     <fieldset>
       <legend><h3>Create New {% if trialId == -1 %}System{% else %}Trial{% endif %} Trait</h3></legend>
@@ -32,7 +32,7 @@
             </td>
             <td>
               <select id='traitType' name='type'
-                                      onchange="SetTraitFormElements('traitDiv',this.options[selectedIndex].value)">
+                                      onchange="fpTrait.setTraitFormElements('traitDiv',this.options[selectedIndex].value)">
                     <option value="-1" name="none">..Select a Trait Type..</option>
                     {% for typ, value in traitTypes.iteritems() %}
                     <option value="{{value|e}}" name={{typ|e}}>{{typ|e}}</option>
