--- a/fpa/fp_web_admin/templates/newTrait.html
+++ b/fpa/fp_web_admin/templates/newTrait.html
@@ -42,11 +42,9 @@
             </td>
           </tr>
         </table>
-        <div id="{{divName}}">
-           <!-- type specific fields added here -->
-        </div>
-        <p><input type="submit" value="Create Trait">
       </div>
+      <div id="{{divName}}"><!-- type specific fields added here --></div>
+      <p><input type="submit" value="Create Trait">
     </fieldset>
   </form>
 </div>
