--- a/fpa/fp_web_admin/static/fpStylePostBootstrap.css
+++ b/fpa/fp_web_admin/static/fpStylePostBootstrap.css
@@ -34,3 +34,24 @@ html {
     background:#222;  /* bootstrap navbar-inverse color, attow */
     color: white;
 }
+
+
+.fp-btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.fp-btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
