--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -2,11 +2,37 @@
 {% block news %}
 class="active"
 {% endblock %}
+
+{% macro newsitem(txt, date, year, heading, author='Michael Kirk') -%}
+    <li>
+        <div class="fpNewsDate">
+            <p>
+                <span>{{ date }}</span>
+                {{ year }}
+            </p>
+        </div>
+        <h2>{{ heading }}<span>{{ author }}</span></h2>
+        <p>
+            {{ txt }}
+
+
+            <!-- If you need to link to more..
+            <span><a href="??.html" class="more">Read More</a></span>
+            -->
+        </p>
+    </li>
+
+    <input type="{{ type }}" value="{{ value|e }}" name="{{ name }}">
+{%- endmacro %}
+
 {% block content %}
 	<div class="fpInfoText">
 		<div class="fpNewsMain">
 			<h1>News</h1>
 			<ul class="fpNewsList">
+
+                {{ newsitem('great new stuff', '03/2', '2016', 'Whoa!') }}
+
                 <li>
                     <div class="fpNewsDate">
                         <p>
