--- a/fpa/fp_web_admin/templates/about.html
+++ b/fpa/fp_web_admin/templates/about.html
@@ -4,22 +4,16 @@
 		<h1>About FieldPrime</h1>
 		<h2>History</h2>
 		<p>
-			FieldPrime was designed and developed in the Computation Biology unit of CSIRO Plant Industry. Its initial
+			FieldPrime was designed and developed in the Computation Biology unit of the CSIRO Agricultural Flagship. Its initial
                purpose was to support the data collection and management needs for various field trials of wheat lines run by
                Dr Colin Cavanagh.  The software is, however, broadly applicable to many situations requiring the collection and
-               location of data, and hence is made available on request for not-for-profit use, subject to approval.
-		</p>
-
-		<h2>Current Version Details</h2>
-		<p>
-			Latest FieldPrime App verion: 1.0<br>
-               Latest FieldPrime Server version: 0.0<br>
+               collation of data, and hence is made available on request for not-for-profit use, subject to approval.
 		</p>
 
 		<h2>Credits</h2>
-           FieldPrime was produced by CSIRO Plant Industry Computational Biology
+           FieldPrime was produced by the CSIRO Agricultural Flagship
            <h3>Software Architect/Author</h3>
-				The FieldPrime Android App, and the FieldPrime Server software were written by
+				The FieldPrime Android App, and the FieldPrime Server software were designed and written by
                <a href="mailto:***REMOVED***?subject=FieldPrime Management Server">Dr Michael Kirk</a>.
            <h3>Specification, Ideas, and Testing</h3>
            <li>Colin Cavanagh
