--- a/fpa/fp_web_admin/templates/newTrait.html
+++ b/fpa/fp_web_admin/templates/newTrait.html
@@ -8,7 +8,7 @@
         onsubmit="return fpTrait.validateNewTraitForm('{{divName}}')"
         method="post">
     <fieldset>
-      <legend><h3>Create New {% if trialId == -1 %}System{% else %}Trial{% endif %} Trait</h3></legend>
+      <legend><h3>Create New {% if trialId == -1 %}Project{% else %}Trial{% endif %} Trait</h3></legend>
       <div class="userInputForm">
         <table>
           <tr>
