Removed sensitive information

--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -136,15 +136,15 @@ class="active"
                             2015
                         </p>
                     </div>
-                    <h2>***REMOVED*** users<span>Michael Kirk</span></h2>
+                    <h2>Ldap users<span>Michael Kirk</span></h2>
                     <p>
-                        The FieldPrime server now supports ***REMOVED*** users. What this means is that instead
+                        The FieldPrime server now supports Ldap users. What this means is that instead
                         of everyone in a project using the same project name and password to login, you can instead
-                        use (if you have one) your CSIRO ***REMOVED*** identity. To allow a ***REMOVED*** user to login using
+                        use (if you have one) your CSIRO Ldap identity. To allow a LDAP user to login using
                         their own ident and password, first you must login with the usual project login, go
-                        to administration page and add users in the "Manage ***REMOVED*** Users" section. This also means
+                        to administration page and add users in the "Manage Ldap Users" section. This also means
                         that if you have access to multiple projects, you can access all of them via a single
-                        ***REMOVED*** login (via a dropdown list of projects you have access to at the top of the FieldPrime
+                        Ldap login (via a dropdown list of projects you have access to at the top of the FieldPrime
                         pages).
 
                         <!-- If you need to link to more..
