Removed sensitive information

--- a/fpa/fp_web_admin/templates/about.html
+++ b/fpa/fp_web_admin/templates/about.html
@@ -14,7 +14,7 @@
            FieldPrime was produced by the CSIRO Agricultural Flagship
            <h3>Software Architect/Author</h3>
 				The FieldPrime Android App, and the FieldPrime Server software were designed and written by
-               <a href="mailto:***REMOVED***?subject=FieldPrime Management Server">Dr Michael Kirk</a>.
+               <a href="mailto:enquiries@csiro.au?subject=FieldPrime Management Server">Dr Michael Kirk</a>.
            <h3>Specification, Ideas, and Testing</h3>
            <li>Colin Cavanagh
            <li>Alexandre Boyer
