--- a/fpa/fp_web_admin/templates/contact.html
+++ b/fpa/fp_web_admin/templates/contact.html
@@ -5,7 +5,7 @@
 			<h2>FieldPrime Software</h2>
 			<p>
               For any questions or issues please contact:
-              <p><a href="mailto:***REMOVED***?subject=FieldPrime Management Server">Dr Michael Kirk</a><br>
+              <p><a href="mailto:enquiries@csiro.au?subject=FieldPrime Management Server">Dr Michael Kirk</a><br>
                 Computational Biology<br>
                 CSIRO Plant Industry<br>
                 +61 2 6246 4519 <br>
